--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ ul li a:hover {
     width: 329px;
     height: 476px;
     display: inline-block;
-    padding: 20px;
+    padding: 15px;
     border-radius: 8px;
     background-color: white;
     margin-top: 20px;
@@ -151,6 +151,68 @@ ul li a:hover {
     font-weight: bold;
     color: #787885;
 }
+.popular-section .see-more {
+    text-align: center;
+    padding: 40px;
+
+    
+}
+.see-more a{
+    text-decoration: none;
+    font-weight: bolder;
+    color: #e02c6d;
+    transition: 1s;
+    border-radius: 15px;
+    padding: 3px 5px;
+    
+
+}
+.see-more a:hover{
+    background-color: #eb5d91;
+    color: white;
+    border-radius: 5px;
+}
 
 
 /* popular section End */
+
+
+/* footer start  */
+footer{
+    width: 100%;
+    height: 239px;
+    background-color:#0A0826;
+    padding: 40px ;
+}
+footer .footer-content{
+    color: white;
+    text-align: center;
+}
+.footer-content h2{
+    font-size: 24px;
+}
+.footer-content p{
+    font-size: 14px;
+    margin: 10px 0px;
+}
+.footer-content i{
+
+    color: white;
+    font-size: 32px;
+    margin-left: 30px;
+    background-color: #22213C;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+   
+  
+}
+.media-icon a{
+    display: inline-block;
+    text-decoration: none;
+}
+/* footer end */
