--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/* font-family: 'Poppins', sans-serif; */
-/* font-family: 'Roboto', sans-serif; */
-
 /* common styles Start  */
 * {
   margin: 0;
@@ -11,18 +8,19 @@ body {
   font-family: "poppins", sans-serif;
 }
 section {
-  padding: 30px 40px;
-  
+  padding: 10% 10%;
 }
-.section-title{
-    color: #3A3A3A;
-    font-size: 28px;
-    text-align: center;
-    margin-bottom: 30px;
+.section-title {
+  color: #3a3a3a;
+  font-size: 28px;
+  text-align: center;
+  margin-bottom: 30px;
 }
 /* common styles End */
 
-/* header design Start  */
+/*-------------------
+ header design Start
+ -------------------  */
 /* nav start  */
 menu h1 {
   text-align: center;
@@ -85,134 +83,189 @@ ul li a:hover {
   border-radius: 50px;
   background-color: rgba(93, 99, 87, 0.123);
 }
-/* header design End */
+/*---------------------
+   header design End 
+   -----------------------*/
 
 /* brand logo section Start */
 
-.all-brand{
-    padding-top: 15px;
-    border: 2px solid gainsboro;
-    display: grid;
-    justify-items: center;
-    align-content: center;
-    grid-gap: 40px;
-    grid-template-columns: repeat(2, 1fr);
+.all-brand {
+  padding-top: 15px;
+  border: 2px solid gainsboro;
+  display: grid;
+  justify-items: center;
+  align-content: center;
+  grid-gap: 40px;
+  grid-template-columns: repeat(2, 1fr);
 }
-.brand img{
-    width: 90px;
+.brand img {
+  width: 90px;
 }
 
 /* brand logo section End */
 
-/* popular section start  */
-.all-popular{
-    display: grid;
-    grid-row-gap: 20px;
-    justify-items: center;
-    
+/* ------------------
+popular section start
+---------------------- */
+.all-popular {
+  display: grid;
+  grid-row-gap: 20px;
+  justify-items: center;
 }
-.popular{
-    box-shadow: 0px 0px 60px 20px #5e636631;
-    width: 329px;
-    height: 476px;
-    display: inline-block;
-    padding: 15px;
-    border-radius: 8px;
-    background-color: white;
-    margin-top: 20px;
-    
+.popular {
+  box-shadow: 0px 0px 60px 20px #5e636631;
+  width: 329px;
+  height: 476px;
+  display: inline-block;
+  padding: 15px;
+  border-radius: 8px;
+  background-color: white;
+  margin-top: 20px;
 }
-.popular h1{
-    font-size: 28px;
-    color: #18191F;
+.popular h1 {
+  font-size: 28px;
+  color: #18191f;
 }
-.popular h5{
-    font-size: 24px;
-    color: rgba(0, 0, 0, 0.87);
-    padding: 2px 0px;
-    font-weight: 400;
+.popular h5 {
+  font-size: 24px;
+  color: rgba(0, 0, 0, 0.87);
+  padding: 2px 0px;
+  font-weight: 400;
 }
-.fas{
-    font-size: 14px;
-    margin: 2px 0px 7px 0px;
+.fas {
+  font-size: 14px;
+  margin: 2px 0px 7px 0px;
 }
-.filled{
-    color: #FB8200;
+.filled, .half-filled {
+  color: #fb8200;
 }
-.half-filled{
-    color:#FB8200;
-    
+.empty {
+  color: #787885;
 }
-.empty{
-    color: #787885;
-}
-.popular p{
-    font-size: 16px;
-    font-weight: bold;
-    color: #787885;
+.popular p {
+  font-size: 16px;
+  font-weight: bold;
+  color: #787885;
 }
 .popular-section .see-more {
-    text-align: center;
-    padding: 40px;
-
-    
+  text-align: center;
+  padding: 40px;
 }
-.see-more a{
-    text-decoration: none;
-    font-weight: bolder;
-    color: #e02c6d;
-    transition: 1s;
-    border-radius: 15px;
-    padding: 3px 5px;
-    
-
+.see-more a {
+  text-decoration: none;
+  font-weight: bolder;
+  color: #e02c6d;
+  border-radius: 12px;
+  padding: 3px 5px;
 }
-.see-more a:hover{
-    background-color: #eb5d91;
-    color: white;
-    border-radius: 5px;
+.see-more a:hover {
+  border: 1px solid #eb5d91;
 }
-
 
 /* popular section End */
 
+/* Animation section start  */
+.field {
+  width: 100%;
+  height: 300px;
+  border: 1px solid;
+  position: relative;
+}
+.hidden-area {
+  width: 60px;
+  height: 200px;
+  background-color: #ffffff;
+  z-index: 1;
+  position: absolute;
+  bottom: 0;
+}
+.store {
+  position: absolute;
+  left: 20px;
+  bottom: 50px;
+  z-index: 2;
+}
+.store i {
+  color: #e02c6d;
+  font-size: 50px;
+}
+.home {
+  position: absolute;
+  bottom: 50px;
+  right: 20px;
+}
+.home i {
+  font-size: 50px;
+  color: #0a0826;
+}
+.cycle {
+  position: absolute;
+  bottom: 50px;
+  z-index: 0;
+  transition: 20s ease-out;
+}
+.cycle img {
+  width: 50px;
+}
+section:hover .cycle {
+  transform: translate(300px);
+}
+.cloud-1 {
+  position: absolute;
+  left: 40%;
+  top: 20px;
+}
+.cloud-2 {
+  position: absolute;
+  left: 45%;
+  top: 20px;
+}
+.cloud-3 {
+  position: absolute;
+  left: 50%;
+  top: 20px;
+}
+.cloud-1 i,
+.cloud-2 i,
+.cloud-3 i {
+  font-size: 30px;
+  color: #435269;
+}
+/* Animation section End */
 
 /* footer start  */
-footer{
-    width: 100%;
-    height: 239px;
-    background-color:#0A0826;
-    padding: 40px ;
+footer {
+  width: 100%;
+  height: 239px;
+  background-color: #0a0826;
+  padding: 40px;
 }
-footer .footer-content{
-    color: white;
-    text-align: center;
+footer .footer-content {
+  color: white;
+  text-align: center;
 }
-.footer-content h2{
-    font-size: 24px;
+.footer-content h2 {
+  font-size: 24px;
 }
-.footer-content p{
-    font-size: 14px;
-    margin: 10px 0px;
+.footer-content p {
+  font-size: 14px;
+  margin: 10px 0px;
 }
-.footer-content i{
-
-    color: white;
-    font-size: 32px;
-    margin-left: 30px;
-    background-color: #22213C;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-   
-  
+.footer-content i {
+  color: white;
+  font-size: 32px;
+  margin-left: 30px;
+  background-color: #22213c;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
-.media-icon a{
-    display: inline-block;
-    text-decoration: none;
+.media-icon a {
+  display: inline-block;
+  text-decoration: none;
 }
 /* footer end */
