--- a/tablet.css
+++ b/tablet.css
@@ -1,3 +1,10 @@
 .all-popular{
     grid-template-columns: repeat(2, 1fr);
 }
+ul{
+    flex-direction: row;
+    justify-content: center;
+}
+ul li{
+    margin: 20px 10px;
+}
